Add controllers and services for clothes dataset adding via admin panel

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.freemarker.cache=false
 spring.freemarker.charset=UTF-8
 
 storage.path=/home/salumno/dressmeapp/local
+storage.path.clothes=/home/salumno/dressmeapp-files/clothes
 
 advice.overweight=Wear clothes that fit your body now\nDon't buy loose-fitting clothes to appear smaller\nFind clothes that fit the largest part of your body and have them tailored\nWear vertical stripes\nGo for V-neck tops\nDon't add extra bulk to your body
 advice.normal=Tight pants / jeans / chinos of bright, catchy colors.\nSweaters with V-neck, knitted sweaters\nAvoid baggy jeans, flares - they will only spoil your figure and break proportions\nShirts, perhaps with rolled up sleeves\nChoose a tail that "sits" on the figure, but does not strongly adhere to it - "sitting" means that the clothes do not fit the figure too tightly
